Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -9,7 +9,7 @@
 
 ## What is the ARM LFS?
 
-The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the National Statistical Service (NSS) of the Republic of Armenia. Before 2014, the Households Integrated Living Condition Survey played the central role of providing labour market statistics. Since 2014, the ARM LFS was conducted monthly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Armenia. 
+The Armenian Labour Force Survey (LFS) is a household-based sample survey conducted by the National Statistical Service (NSS) of the Republic of Armenia. Before 2014, the Households Integrated Living Condition Survey played the central role of providing labour market statistics. Since 2014, the ARM LFS was conducted monthly every year with the aim to measure the levels and trends of employment, unemployment, and labour force in Armenia. 
 
 
 ## What does the ARM LFS cover?
@@ -42,11 +42,11 @@ GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 year
 (*Note: The officially reported sample sizes are from methodology documentation of each year, which can be found from the [online publication library of NSS](https://armstat.am/en/?nid=82&year=2013).*)  
 
 ## Where can the data be found?
-All data is publicly available on the website of [Statistical Committee of the Republic of Armenia] ([http://nada.nso.gov.lk/index.php/home](https://armstat.am/en/?nid=212)). As mentioned above, each year's corresponding documentation on employment and other estimates can be downloaded without any restrictions from their oneline publication library.
+All data is publicly available on the website of [Statistical Committee of the Republic of Armenia] ([http://nada.nso.gov.lk/index.php/home](https://armstat.am/en/?nid=212)). As mentioned above, each year's corresponding documentation on employment and other estimates can be downloaded without any restrictions from their online publication library.
 
 ## What is the sampling procedure?
 
-A two stage stratified sample by regions (marzes) has been designed to conduct the survey. The method of systematic probability sampling was used to frame the sample. Yerevan and all marzes with rural and urban settlements were covered by sample population with proportion of all households available in these strata. Based on the administrative and territorial division of ARM at the first stage of sampling, the preliminary sampling units, i.e. enumeration areas were selected. At the second stage of sampling, the PSU or households, were randomly selected.  
+A two-stage stratified sample by regions (marzes) has been designed to conduct the survey. The method of systematic probability sampling was used to frame the sample. Yerevan and all marzes with rural and urban settlements were covered by sample population with proportion of all households available in these strata. Based on the administrative and territorial division of ARM at the first stage of sampling, the preliminary sampling units, i.e. enumeration areas were selected. At the second stage of sampling, the PSU or households, were randomly selected.  
 
 ## What is the geographic significance level?
 
@@ -73,7 +73,7 @@ In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and 
 
 ### Migrated from other countries
 
-Since 2018, ARM LFS started to have the migration section. From 2019 to 2022, one of the "last settlement" options is Artsakh, an enclave within Azerbaijan from the 2020 Nagorno-Karabakh war until the 2023 Azerbaijani offensive, when the Azerbaijani military took control over the remaining territory controlled by Artsakh. Although Artsakh declared itself an independent state, as the Republic of Artsakh, no United Nations member state or observer recognised Artsakh's independence and consider it as part of Azerbaijiani. Consequently, there is no ISO three-letter country code for Artsakh. In this case, we coded Artsakh "AZE", using the ISO code of Azerbaijiani for Artsakh. 
+Since 2018, ARM LFS started to have the migration section. From 2019 to 2022, one of the "last settlement" options is Artsakh, an enclave within Azerbaijan from the 2020 Nagorno-Karabakh war until the 2023 Azerbaijani offensive, when the Azerbaijani military took control over the remaining territory controlled by Artsakh. Although Artsakh declared itself an independent state, as the Republic of Artsakh, no United Nations member state or observer recognized Artsakh's independence and consider it as part of Azerbaijian. Consequently, there is no ISO three-letter country code for Artsakh. In this case, we coded Artsakh "AZE", using the ISO code of Azerbaijian for Artsakh. 
 
 ![migration_country](utilities/migration.png)
 
@@ -83,7 +83,7 @@ Different from previous years, the last two years, 2021 and 2022 do not have the
 
 ![2022_age_group](utilities/age_groups.png)
 
-In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represnt the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
+In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represent the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
 
 ### Employment rate comparison
 
