Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -63,9 +63,11 @@ The ARM LFS went through a change between 2017 and 2018 in its questionnaire str
 |![report](utilities/2017_evidence.png) | ![report18](utilities/2018_evidence.png) | 
 |![questionnaire](utilities/2017_question.png) | ![questionnaire18](utilities/2018_question.png) |
 
-This change leads to an apparent decrease in non-paid employees.
+This change leads to an apparent decrease in non-paid employees after 2017.
 
 ![empstat](utilities/empstat.png)
+
+In addition, kindly be advised that it is not feasible to convert between different ICLS versions in ARM LFS. Although the questionnaire screenshots above show that the employment status is composed by several sub-questions in terms of "for-sale" and "for-own-consumption" work, the raw datasets only present the final decision about whether a given observation is employed or not based on their answers to the sub-questions which we couldn't see. Therefore, we were not able to convert between ICLS-13 and ICLS-19 by "switching on and off" the "for-own-consumption jobs".  
 
 ### Coding of industry and occupation codes
 
