--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -14,16 +14,14 @@ The Armenian Labour Force Survey (LFS) is a household-based sample survey conduc
 
 ## What does the ARM LFS cover?
 
-The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and incomes etc. The ARM LFS started to include migration information since 2018. 
+The ARM LFS findings provide annual and quarterly short-term labour market statistical indicators. In addition to general household characteristics, the LFS covers indicators such as the country labour resources, or working age population (aged 15 to 75), by gender, age, education and family statues; active and inactive population in labour market by various characteristics; employment in different economic sectors, working hours and incomes etc. The ARM LFS includes migration information since 2018. 
 
-**Scope of Survey**:
-<br>
-1) Primary Sampling Unit (PSU): PSU is a private household. The residents of the retirement homes, prisons
+The ARM LFS covers all 11 marzes (provinces) and both rural and urban settlements. The survey is run continuously through the month (i.e., sample size per month is roughly 1/12th of annual sample size).
+
+It covers residents of private households. The residents of the retirement homes, prisons
 and other institutional households are not surveyed.
-2) Survey Units: People aged from 15 to 75 who a) usually live in a given household; b) were absent from the household up to 12 months (in country or abroad); c) were in compulsory military service.
-3) Observation Period: All 12 months of the surveyed year.
-4) Reference Period: The last one calendar week preceding the survey, from Monday to Sunday.
-5) Geographical Coverage: Survey conducted in all 11 marzes (provinces), covering both rural and urban settlements.
+
+Between 2014 and 2017 residents absent from the household for more than three months were not included in the survey (i.e., present respondent requested not to reply in their name). From 2018 onwards this was extended to 12 months (i.e., details on a person absent for 8 months are included).
 
 GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 years in total. Years and their corresponding sample sizes of LFS harmonized are:
 
@@ -42,6 +40,7 @@ GLD harmonization of ARM LFS covers years from 2014 to 2022 continuously, 9 year
 (*Note: The officially reported sample sizes are from methodology documentation of each year, which can be found from the [online publication library of NSS](https://armstat.am/en/?nid=82&year=2013).*)  
 
 ## Where can the data be found?
+
 All data is publicly available on the website of [Statistical Committee of the Republic of Armenia] ([http://nada.nso.gov.lk/index.php/home](https://armstat.am/en/?nid=212)). As mentioned above, each year's corresponding documentation on employment and other estimates can be downloaded without any restrictions from their online publication library.
 
 ## What is the sampling procedure?
@@ -51,6 +50,8 @@ A two-stage stratified sample by regions (marzes) has been designed to conduct t
 ## What is the geographic significance level?
 
 According to the [methodology section](utilities/ARM_2018_methodologies.pdf) in ARM LFS annual reports, the annual size of the sample in terms of aggregated indicators (e.g. unemployment, employment, etc.) provides high representativeness on country level, and provides minimum representativeness on marz (province) level.
+
+The 2018 methodology states that any estimated population group with a weighted population of fewer than 7’500 individuals will have limitations of reliability and need to be used with care.
 
 ## Other noteworthy aspects  
 
@@ -71,25 +72,26 @@ In addition, kindly be advised that it is not feasible to convert between differ
 
 ### Coding of industry and occupation codes
 
-In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and ISCO-08 respectively for all years. No national classifications applied. However, regarding the level of classification, both industry and occupation only used letters. The full lists of industry and occupation labels are covered in this [separate document](Classifications_of_Industry_and_Occupation.md) . 
+In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and ISCO-08 respectively for all years. No national classifications applied. 
 
-### Migrated from other countries
+However, regarding the level of classification, both industry and occupation only used the first level disaggregation, that is Major Units for occupation (numbers 0-9) and Sections for industry (letters A to U). The full lists of industry and occupation labels are covered in this [separate document](Classifications_of_Industry_and_Occupation.md). 
 
-Since 2018, ARM LFS started to have the migration section. From 2019 to 2022, one of the "last settlement" options is Artsakh, an enclave within Azerbaijan from the 2020 Nagorno-Karabakh war until the 2023 Azerbaijani offensive, when the Azerbaijani military took control over the remaining territory controlled by Artsakh. Although Artsakh declared itself an independent state, as the Republic of Artsakh, no United Nations member state or observer recognized Artsakh's independence and consider it as part of Azerbaijian. Consequently, there is no ISO three-letter country code for Artsakh. In this case, we coded Artsakh "AZE", using the ISO code of Azerbaijian for Artsakh. 
+### Migration from other countries
+
+Since 2018, ARM LFS includes a migration section. From 2019 to 2022, one of the "last settlement" options is *Artsakh* (also known as Nagorno-Karabakh), an enclave of mostly ethnic Armenian contested between Armenia and Azerbaijan. The international community’s position as of December 2023 is that the area is official part of Azerbaijan. Consequently, and as there is no ISO three-letter country code for Artsakh, respondents with this answer are coded as "AZE", the ISO code of Azerbaijan. This is purely to keep answers within the alpha-3 ISO codes and in no way an endorsement of any political position. 
 
 ![migration_country](utilities/migration.png)
 
 ### Age variables in 2021 and 2022
 
-Different from previous years, the last two years, 2021 and 2022 do not have the actual age of each observation in the raw dataset. Instead, they coded the age variable as in 16 age groups (refer to the screenshot from 2022 below).
+Different from previous years, the last two years, 2021 and 2022 do not have the actual age of each observation in the raw dataset. Instead, age is coded in 16 age groups (see screenshot from 2022 below).
 
 ![2022_age_group](utilities/age_groups.png)
 
-In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks. Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represent the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
+In this case, we harmonized our `age` variable using the mean of each sub-group of the original `Age_16groups` so as to proceed with our quality checks which require numeric values (i.e., all people between 0 and 4 are coded as 2 year olds, all 65 to 69 are coded as 67). Hence, for 2021 and 2022, `age` in GLD harmonization of ARM LFS does not represent the actual age of a given observation. Yet instead, it indicates the age group a given observation belongs to. 
 
 ### Employment rate comparison
 
-As part of our harmonization quality checks, we conducted a cross examination of employment rate with official annual reports. The figure below shows the comparison which indicates that our `lstatus` was correctly harmonized and the results align nicely with official results. 
+As part of our harmonization quality checks, we conducted a cross examination of employment rate with official annual reports. The figure below shows the comparison which indicates that our `lstatus` was correctly harmonized and the results align with official results. 
 
 ![employment_rate](utilities/employment_comparison.png)
-
