Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -85,4 +85,5 @@ The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classi
 | ENE rounds   | Raw variable     | NMA version | ISIC digits      | ISIC version |
 |--------------|------------------|-------------|------------------|--------------|
 | 2000 - 2009  | 4 digit codes    | NMA 1999    | First two digits | ISIC 3       |
-| 2010 - 2018  | Broad categories | NMA 2010    | Letter           | ISIC 4       |
+| 2010 - 2017  | Broad categories | Cannot be determined   | Not applicable           | Not applicable       |
+|  2018        | 4 digit codes    | NMA 2010    | Letter           | ISIC 4       |
