Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -81,6 +81,14 @@ In terms of classifications of industry and occupation, ARM LFS used ISIC-4 and 
 
 However, regarding the level of classification, both industry and occupation only used the first level disaggregation, that is Major Units for occupation (numbers 0-9) and Sections for industry (letters A to U). The full lists of industry and occupation labels are covered in this [separate document](Classifications_of_Industry_and_Occupation.md). 
 
+### Coding PSU and strata
+
+Based on the description of sampling methodology in the annual report of 2018 (refer to the screenshot below), the sampling is based on the 2011 census. The  PSUs are census enumeration areas
+
+![PSU](utilities/PSU.png)
+
+
+
 ### Migration from other countries
 
 Since 2018, ARM LFS includes a migration section. From 2019 to 2022, one of the "last settlement" options is *Artsakh* (also known as Nagorno-Karabakh), an enclave of mostly ethnic Armenian contested between Armenia and Azerbaijan. The international community’s position as of December 2023 is that the area is official part of Azerbaijan. Consequently, and as there is no ISO three-letter country code for Artsakh, respondents with this answer are coded as "AZE", the ISO code of Azerbaijan. This is purely to keep answers within the alpha-3 ISO codes and in no way an endorsement of any political position. 
