Update 1. Introduction to Armenia LFS.md

--- a/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
+++ b/Support/B - Country Survey Details/ARM/1. Introduction to Armenia LFS.md
@@ -83,10 +83,9 @@ However, regarding the level of classification, both industry and occupation onl
 
 ### Coding PSU and strata
 
-Based on the description of sampling methodology in the annual report of 2018 (refer to the screenshot below), the sampling is based on the 2011 census. The  PSUs are census enumeration areas
+Based on the description of sampling methodology in the annual report of 2018 (refer to the screenshot below), the sampling is based on the 2011 census. The PSUs are census enumeration areas to which we currently do not have access. In this case, we didn't code `psu` in GLD. We may update this variable in the future if information concerned becomes availabel.   
 
 ![PSU](utilities/PSU.png)
-
 
 
 ### Migration from other countries
