--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -14,7 +14,7 @@
 
 ## What is the MAR ENE?
 
-The Morocco Enquête Nationale sur l’Emploi (ENE) is an labor force survey conducted by the La Direction de la Statistique relevant du Haut Commissariat au Plan (The Statistics Unit of the High Commission for Planning of Morocco). The survey began in 1976 as an annual survey with an exclusively urban sample. It evolved to become a nationally representative survey in 1999, and began collecting quarterly information in 1996. While the survey goes a long way, the GLD only has data for each year between 2000 and 2018.  
+The Morocco Enquête Nationale sur l’Emploi (ENE) is a labor force survey conducted by the La Direction de la Statistique relevant du Haut Commissariat au Plan (The Statistics Unit of the High Commission for Planning of Morocco). The survey began in 1976 as an annual survey with an exclusively urban sample. It evolved to become a nationally representative survey in 1999, and began collecting quarterly information in 1996. While the survey goes a long way, the GLD only has data for each year between 2000 and 2018.  
 
 The table below summarizes the evolution of the survey design over time: 
 |                         | 1976-1982                       | 1984-1993                                | 1995-2005                                                                                           | 2006-2016                                                                                     | 2017-present                                                                            |
@@ -29,7 +29,7 @@ The table below summarizes the evolution of the survey design over time:
 
 The Morocco ENE mainly covers information on the socioeconomic and demographic characteristics, education and labor market activites over the past 7 days. 
 
-While the survey started in 1976, the GLD only has data for each year between 2000 and 2018. Note that sampled households exapnded in years 2006 (from ~45000 to ~60000) and 2017 (from ~60000 to ~90000). Sample size for each survey round are as follows:
+While the survey started in 1976, the GLD only has data for each year between 2000 and 2018. Note that with changes in sampling frame, household sample size expanded in years 2006 (from ~45000 to ~60000) and 2017 (from ~60000 to ~90000). Sample size for each survey round are as follows:
 
 | Year | Persons  | Households |
 |------|----------|------------|
@@ -69,7 +69,7 @@ The official reports detail results by area of residence (urban/rural) and regio
 
 ### Geographic information
 
-In 2015, Morocco's administrative landscape underwent a pivotal transformation with the consolidation of its regions, reducing the total from 16 to 12. This reorganization amarked a significant step towards decentralization and regional autonomy. In the Morocco ENE, this regional reorganization was reflected as soon as the 2015 survey was released. 
+Morocco underwent a comprehensive reorganization of its regional boundaries in 2015. For more information on the regional reorganization and its implications on the survey data, refer to this [separate document](Geographic%20Information.md).
 
 ### Education
 
