Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -25,7 +25,7 @@ The table below summarizes the evolution of the survey design over time:
 | **Publications**        | Annual                          | Annual                                   | Annual for basic indicators: activity, employment, and unemployment: Quarterly                       | Quarterly                                                                                       | Quarterly                                                                                      |
 
 
-## What does the the MAR ENE cover?
+## What does the MAR ENE cover?
 
 The Morocco ENE mainly covers information on the socioeconomic and demographic characteristics, education and labor market activites over the past 7 days. 
 
@@ -61,7 +61,7 @@ The datasets are not accessible to the public and researchers have to request th
 
 The survey adopts a two stage stratified sampling design. The national territory is initially segmented into drawing zones based on homogeneity. Within these zones, Primary Sampling Units (PSUs), each comprising several adjacent census districts, are defined. The master sample is formed by selecting a certain percentage of these PSUs, ensuring balanced representation across different areas. PSUs are chosen within each zone by probability proportional to size.
 
-## What is the geographic significance level?
+## What is the significance level?
 
 The official reports detail results by area of residence (urban/rural) and regions. 
 
@@ -77,13 +77,13 @@ The Morocco ENE uses a 4-digit classification system to identify respondents' ed
 
 ### Occupation codes
 
-The Morocco ENE uses the *Nomenclature Analytique des Professions* to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). For this reason, we assigned the `occup_isco` codes only at the first digit, similar to our approach with the `occup` variable. For users who are interested with a more detailed mapping with ISCO, we have prepared a recommended mapping at the 2-digit level shown in this [separate document](Mapping%20to%20ISCO.md)
+In most rounds, the Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). There are also years when the only available occupation information is aggregated to 9 broad categories. For these reasons, we skipped on constructing the detailed occupation variable, `occup_isco`. However, we have prepared a recommended mapping at the 2-digit level as detailed in this [separate document](Mapping%20to%20ISCO.md)
+
 
 ### Industry codes
-The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the NMA 1999, which is compatible with ISIC rev 3. In the 2010 - 2018 rounds, the ENE industry classification switched to the updated NMA 2010, which is compatible with ISIC rev 4, but industry infomation is only available at broad categories and only allowed us to map to the ISIC rev 4 letters.
-
+The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the NMA 1999, which is compatible with ISIC rev 3 at the two-digit level. In the 2010 - 2017 rounds, only aggregated industry information are available and thus, we cannot construct `industrycat_isic`; and in 2018, the industry information were based on the NMA 2010, which is compatible with ISIC rev 4 at the two-digit level. 
 | ENE rounds   | Raw variable     | NMA version | ISIC digits      | ISIC version |
 |--------------|------------------|-------------|------------------|--------------|
 | 2000 - 2009  | 4 digit codes    | NMA 1999    | First two digits | ISIC 3       |
 | 2010 - 2017  | Broad categories | Cannot be determined   | Not applicable           | Not applicable       |
-|  2018        | 4 digit codes    | NMA 2010    | Letter           | ISIC 4       |
+|  2018        | 4 digit codes    | NMA 2010    | First two digits           | ISIC 4       |
