Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -77,13 +77,18 @@ The Morocco ENE uses a 4-digit classification system to identify respondents' ed
 
 ### Occupation codes
 
-In most rounds, the Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. Unlike most country occupational classification systems, this classification system is not adapted from the Internactional Standard Classification of Occupations (ISCO). There are also years when the only available occupation information is aggregated to 9 broad categories. For these reasons, we skipped on constructing the detailed occupation variable, `occup_isco`. However, we have prepared a recommended mapping at the 2-digit level as detailed in this [separate document](Mapping%20to%20ISCO.md)
+The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. In the 2000 - 2009 rounds, the occupation information were detailed at the 4-digit level following the NAP 2001. In the case of the 2000 ENE, the occupation codes appear to be identical to NAP 2001 despite being released one year prior. In the 2010 - 2017 rounds, only aggregated occupation information are available; and in 2018, the occupation information were based on NMA 2014. Both the NMA 2001 and NMA 2014 are not compatible with the International Standard Classification of Occupations (ISCO). For this reason, along with the aggregated occupation information in the other years, we skipped on constructing the detailed occupation variable, `occup_isco` for all years. However, we have prepared a recommended mapping at the 2-digit level using our best judgment as detailed in this [separate document](Mapping%20to%20ISCO.md). 
 
+| ENE rounds   | Raw variable     | NAP version | ISCO equivalent      | 
+|--------------|------------------|-------------|------------------|
+| 2000 - 2009  | 4 digit codes    | NAP 2001    |Not compatible |
+| 2010 - 2017  | 12 broad categories | Cannot be determined   | Not applicable           |
+|  2018        | 4 digit codes    | NMA 2014    | Not compatible         |
 
 ### Industry codes
 The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the NMA 1999, which is compatible with ISIC rev 3 at the two-digit level. In the 2010 - 2017 rounds, only aggregated industry information are available and thus, we cannot construct `industrycat_isic`; and in 2018, the industry information were based on the NMA 2010, which is compatible with ISIC rev 4 at the two-digit level. 
 | ENE rounds   | Raw variable     | NMA version | ISIC digits      | ISIC version |
 |--------------|------------------|-------------|------------------|--------------|
 | 2000 - 2009  | 4 digit codes    | NMA 1999    | First two digits | ISIC 3       |
-| 2010 - 2017  | Broad categories | Cannot be determined   | Not applicable           | Not applicable       |
+| 2010 - 2017  | 16 broad categories | Cannot be determined   | Not applicable           | Not applicable       |
 |  2018        | 4 digit codes    | NMA 2010    | First two digits           | ISIC 4       |
