--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -73,11 +73,11 @@ Morocco underwent a comprehensive reorganization of its regional boundaries in 2
 
 ### Education
 
-The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes*. In the raw datasets, the variable for this detailed education codes was available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more information on the mapping between the education codes or the broad categories with the GLD education variable, refer to this [separate document](Education%20system.md).
+The Morocco ENE uses a 4-digit classification system to identify respondents' educational attainment called the *Nomenclature nationale des diplômes* (NND). In the raw datasets, detailed education codes based on the [NND 2000](Utilities/Nomenclature%20nationale%20des%20diplômes,%20Juin%202000%20(Version%20Fr.pdf) were available between the 2000 and 2013 rounds, but switched to broad categories in succeeding rounds. For more details on Morocco's education system and the mapping with the GLD `educat7` categories, refer to this [separate document](Education%20system.md).
 
 ### Occupation codes
 
-The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. In the 2000 - 2009 rounds, the occupation information were detailed at the 4-digit level following the NAP 2001. In the case of the 2000 ENE, the occupation codes appear to be identical to NAP 2001 despite being released one year prior. In the 2010 - 2017 rounds, only aggregated occupation information are available; and in 2018, the occupation information were based on NMA 2014. Both the NMA 2001 and NMA 2014 are not compatible with the International Standard Classification of Occupations (ISCO). For this reason, along with the aggregated occupation information in the other years, we skipped on constructing the detailed occupation variable, `occup_isco` for all years. However, we have prepared a recommended mapping at the 2-digit level using our best judgment as detailed in this [separate document](Mapping%20to%20ISCO.md). 
+The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. In the 2000 - 2009 rounds, the occupation information were detailed at the 4-digit level following the NAP 2001. In the case of the 2000 ENE, the occupation codes appear to be identical to [NAP 2001](Utilities/Nomenclature%20analytique%20des%20professions,%20Mai%202001%20(Version%20Fr.pdf) despite being released one year prior. In the 2010 - 2017 rounds, only aggregated occupation information are available; and in 2018, the occupation information were based on [NAP 2014](Utilities/Nomenclature%20analytique%20des%20professions,%20Décembre%202014%20(Version%20Fr)%20(1).pdf). Both the NAP 2001 and NAP 2014 are not compatible with the International Standard Classification of Occupations (ISCO). For this reason, along with the aggregated occupation information in the other years, we skipped on constructing the detailed occupation variable, `occup_isco` for all years. However, we have prepared a recommended mapping at the 2-digit level using our best judgment as detailed in this [separate document](Mapping%20to%20ISCO.md). 
 
 | ENE rounds   | Raw variable     | NAP version | ISCO equivalent      | 
 |--------------|------------------|-------------|------------------|
@@ -86,7 +86,7 @@ The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP)
 |  2018        | 4 digit codes    | NMA 2014    | Not compatible         |
 
 ### Industry codes
-The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the NMA 1999, which is compatible with ISIC rev 3 at the two-digit level. In the 2010 - 2017 rounds, only aggregated industry information are available and thus, we cannot construct `industrycat_isic`; and in 2018, the industry information were based on the NMA 2010, which is compatible with ISIC rev 4 at the two-digit level. 
+The Morocco ENE uses the *Nomenclature Morocaine des Activités* (NMA) to classify industries. In the 2000 - 2009 rounds, the industry information were detailed at the 4-digt level following the [NMA 1999](Utilities/Nomenclature%20marocaine%20des%20activités.pdf), which is compatible with ISIC rev 3 at the two-digit level. In the 2010 - 2017 rounds, only aggregated industry information are available and thus, we cannot construct `industrycat_isic`; and in 2018, the industry information were based on the [NMA 2010](Utilities/Nomenclature%20marocaine%20des%20activités,%20NMA%202010%20(version%20française).pdf), which is compatible with ISIC rev 4 at the two-digit level. 
 | ENE rounds   | Raw variable     | NMA version | ISIC digits      | ISIC version |
 |--------------|------------------|-------------|------------------|--------------|
 | 2000 - 2009  | 4 digit codes    | NMA 1999    | First two digits | ISIC 3       |
