Update 1. Introduction to ENE.md

--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -77,7 +77,7 @@ The Morocco ENE uses a 4-digit classification system to identify respondents' ed
 
 ### Occupation codes
 
-The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. In the 2000 - 2009 rounds, the occupation information were detailed at the 4-digit level following the NAP 2001. In the case of the 2000 ENE, the occupation codes appear to be identical to [NAP 2001](Utilities/Nomenclature%20analytique%20des%20professions,%20Mai%202001%20(Version%20Fr.pdf) despite being released one year prior. In the 2010 - 2017 rounds, only aggregated occupation information are available; and in 2018, the occupation information were based on [NAP 2014](Utilities/Nomenclature%20analytique%20des%20professions,%20Décembre%202014%20(Version%20Fr)%20(1).pdf). Both the NAP 2001 and NAP 2014 are not compatible with the International Standard Classification of Occupations (ISCO). For this reason, along with the aggregated occupation information in the other years, we skipped on constructing the detailed occupation variable, `occup_isco` for all years. However, we have prepared a recommended mapping at the 2-digit level using our best judgment as detailed in this [separate document](Mapping%20to%20ISCO.md). 
+The Morocco ENE uses the 4-digit *Nomenclature Analytique des Professions* (NAP) to classify occupations. In the 2000 - 2009 rounds, the occupation information were detailed at the 4-digit level following the NAP 2001. In the case of the 2000 ENE, the occupation codes appear to be identical to [NAP 2001](Utilities/Nomenclature%20analytique%20des%20professions,%20Mai%202001%20(Version%20Fr).pdf) despite being released one year prior. In the 2010 - 2017 rounds, only aggregated occupation information are available; and in 2018, the occupation information were based on [NAP 2014](Utilities/Nomenclature%20analytique%20des%20professions,%20Décembre%202014%20(Version%20Fr)%20(1).pdf). Both the NAP 2001 and NAP 2014 are not compatible with the International Standard Classification of Occupations (ISCO). For this reason, along with the aggregated occupation information in the other years, we skipped on constructing the detailed occupation variable, `occup_isco` for all years. However, we have prepared a recommended mapping at the 2-digit level using our best judgment as detailed in this [separate document](Mapping%20to%20ISCO.md). 
 
 | ENE rounds   | Raw variable     | NAP version | ISCO equivalent      | 
 |--------------|------------------|-------------|------------------|
