--- a/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
+++ b/Support/B - Country Survey Details/MAR/ENE/1. Introduction to ENE.md
@@ -27,7 +27,7 @@ The table below summarizes the evolution of the survey design over time:
 
 ## What does the MAR ENE cover?
 
-The Morocco ENE mainly covers information on the socioeconomic and demographic characteristics, education and labor market activites over the past 7 days. 
+The Morocco ENE mainly covers information on the socioeconomic and demographic characteristics, education and labor market activities over the past 7 days. 
 
 While the survey started in 1976, the GLD only has data for each year between 2000 and 2018. Note that with changes in sampling frame, household sample size expanded in years 2006 (from ~45000 to ~60000) and 2017 (from ~60000 to ~90000). Sample size for each survey round are as follows:
 
